--- a/yyr.html
+++ b/yyr.html
@@ -270,9 +270,9 @@
     };
     S.Color = function (r, g, b, a) {
         this.r = 255;
-        this.g = 192;
-        this.b = 203;
-        this.a = a;
+        this.g = 0;
+        this.b = 0;
+        this.a = 0;
     };
     S.Color.prototype = {
         render: function () {
