--- a/yyr.html
+++ b/yyr.html
@@ -115,7 +115,7 @@
         init: function () {
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
-            S.UI.simulate("亲爱的yyr|虽然你是个憨包🐶|虽然你天天想要铜我|但是生日快乐|不一定能陪你打游戏到老|#countdown 3|#rectangle 15x15|#circle 12 |往后余生 yyr要永远开心");
+            S.UI.simulate("亲爱的yyr|虽然你是个憨包🐶|虽然你天天骂我|但是生日快乐|往后余生|#countdown 3|永远开心");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
